syntax = "proto3";

option csharp_namespace = "Models.Proto";

message Entry {
  string name = 1;
  repeated Value data = 2;
}

message Value {
  double timestamp = 1;
  double value = 2;
}

message DataPayload {
  repeated Entry signals = 1;
}