syntax = "proto3";

option csharp_namespace = "Models.Proto";

message RangeRequest {
  repeated string signals = 1;
  uint64 from = 2;
  uint64 to = 3;
}